# inventory-finder-image-creator

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  create-image.ps1  create-image.sh  first_boot.sh  provision-image.ps1  provision-image.sh  pyproject.toml  setup.ps1  setup.sh  station.conf.example
tests/: conftest.py  test_provision_image.py
