[project]
name = "inventory-finder-image-creator"
version = "0.1.0"
description = "SD card preparation tool for inventory-finder Pi stations"
requires-python = ">=3.13"
dependencies = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "bash: tests that run bash scripts via subprocess (Linux/macOS only)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E402"]

[dependency-groups]
test = [
    "pytest>=8.0",
]
dev = [
    "ruff>=0.3",
]
